--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server",
+    "dev": "nodemon --watch ./server server"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,12 @@
   },
   "homepage": "https://github.com/megancoyle/what-am-i-even-doing#readme",
   "dependencies": {
+    "axios": "^0.17.1",
+    "dotenv": "^4.0.0",
     "express": "^4.13.4",
     "yelp-api-v3": "^1.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.5"
   }
 }
